# wireless-copy

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: app.cpp  app.hpp  debug.cpp  header.hpp  listen.cpp  main.cpp  read_clipboard.cpp  whisper.cpp
